@@ -25,6 +25,7 @@
  - [DS-212] NPE thrown during Harvest of non-items when visibility restriction is enabled
  - [DS-213] IPAuthentication extended to allow negative matching
  - [DS-216] Migrating items that use additional metadata schemas causes an NPE
+ - [DS-219] Internal Server error - include login details of user
  - [DS-221] XMLUI 'current activity' recognises Google Chrome as Safari
 
 (Larry Stone)
